Added things I enjoy and Marbo sheet

--- a/index.html
+++ b/index.html
@@ -4,19 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>salmoooon</title>
-
   <link rel="stylesheet" href="/style.css">
-
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
   <link rel="manifest" href="/favicon/site.webmanifest">
 </head>
 <body data-theme="dark">
-
   <!-- Canvas for star background -->
   <canvas id="star-canvas"></canvas>
-
   <!-- Dark/Light Toggle Switch -->
   <div class="theme-toggle">
     <label class="switch">
@@ -24,20 +20,17 @@
       <span class="slider"></span>
     </label>
   </div>
-
   <div class="container">
-
     <!-- Name and Profile Pic -->
     <div class="card profile">
       <img src="/images/profile.png" alt="Profile picture">
       <div>
         <h1>salmoooon</h1>
-        <p>Wrong place if you came for your daily fix...🚬</p>
-        <p>You'll find everything I want you to know about me here though!</p>
+        <p>Wrong place if you came for your morning fix...🚬</p>
+        <p>Here you'll find everything I want you to know about me though!</p>
       </div>
     </div>
-
-    <!-- Things I Enjoy -->
+    <!-- Things I Enjoy/Hate -->
     <div class="card">
       <details class="animated">
         <summary>Things I Enjoy:</summary>
@@ -46,28 +39,113 @@
             <li>Smoking
               <ul>
                 <li>Cigs, cigars, vapes, shisha, you name it!</li>
-                <li>wip</li>
+                <li>I might be the healthiest smoker you've met</li>
               </ul>
             </li>
             <li>Shota art
               <ul>
-                <li>wip</li>
-                <li>wip</li>
+                <li>Both SFW & NSFW, as long as it's fictional</li>
+                <li>I married to a shota artist</li>
               </ul>
             </li>
             <li>Furries
               <ul>
-                <li>wip</li>
-                <li>wip</li>
+                <li>Spent way too much on commissions...</li>
+                <li>I don't RP though</li>
+              </ul>
+            </li>
+            <li>Cats
+              <ul>
+                <li>Proud owner of two cats</li>
+                <li>One of them screams every night which affects my sleep real bad</li>
+              </ul>
+            </li>
+            <li>Self-hosting
+              <ul>
+                <li>This site was built with HTML, CSS, and javascript</li>
+                <li>Not self-hosted though, it's hosted on Github Pages</li>
+              </ul>
+            </li>
+            <li>PC Building
+              <ul>
+                <li>RGB is a sin, change my mind</li>
+                <li>I worked for a PC component company</li>
+              </ul>
+            </li>
+            <li>Python
+              <ul>
+                <li>I worked as a backend SWE/SQA, okay I'll stop the boring part LMAO!</li>
+              </ul>
+            </li>
+            <li>Languages
+              <ul>
+                <li>I've been on the internet long enough to write/speak in English</li>
+                <li>但其實中文才是我的母語</li>
+                <li>日本語は...ちょっと話せます</li>
+                <li>No, programming languages don't count as one</li>
+              </ul>
+            </li>
+            <li>Long lists and emojis
+              <ul>
+                <li>Like the one you're reading!</li>
+                <li>I used as little emojis as possible so you know this isn't AI generated</li>
+              </ul>
+            </li>
+            <li>Indie games
+              <ul>
+                <li>Outer Wilds, Hollow Knight, and Sludge Life, to name my three favorite games/series</li>
+              </ul>
+            </li>
+            <li>Kirby
+              <ul>
+                <li>I have a cabinet full of Kirby plushies, figures, and merch</li>
+                <li>I 100%-ed all "Good" Kirby games released on the DS, Switch 1 & 2</li>
+              </ul>
+            </li>
+            <li>FFXIV (FF14)
+              <ul>
+                <li>The game that influenced me the most</li>
+                <li>↪️ララフェル↩️↪️最高品質↩️</li>
+                <li>Learned 3D modeling and game modding, just so my character could smoke in-game</li>
+              </ul>
+            </li>
+            <li>Did I mention smoking?
+              <ul>
+                <li>Been a proud smoker for 15+ years!</li>
+                <li>No brand preference though, I smoke what I got</li>
+              </ul>
+            </li>
+            <li>Camping
+              <ul>
+                <li>Not glamping, not hardcore hiking, just normal camping!</li>
+              </ul>
+            </li>
+            <li>Reading
+              <ul>
+                <li>Manga, science fiction, political</li>
+                <li>Yes, I still buy in physical in today's year</li>
+              </ul>
+            </li>
+            <li>Writing
+              <ul>
+                <li>I never shared my work with anyone except my significant other though</li>
+              </ul>
+            </li>
+            <li>Politics
+              <ul>
+                <li>Discussions, but not arguments</li>
+              </ul>
+            </li>
+            <li>Cleaning/Renovating My House
+              <ul>
+                <li>IDK whatelse to put in so here it is</li>
+                <li>But I mean for real, I like things to be tidy and comfy!</li>
               </ul>
             </li>
           </ul>
         </div>
       </details>
-    </div>
-
-    <!-- Things I Hate -->
-    <div class="card">
+      <div class="spacer"></div>
       <details class="animated">
         <summary>Things I Hate:</summary>
         <div class="details-content">
@@ -88,24 +166,42 @@
         </div>
       </details>
     </div>
-
     <!-- Gallery Section -->
     <div class="card gallery">
-      <h2>My furry OC, Marbo</h2>
+      <h2>Marbo, my furry OC</h2>
         <details class="animated">
-          <summary>Character Settings:</summary>
+          <summary>Character Details:</summary>
           <div class="details-content">
             <ul>
-              <li>wip
+              <li>Age:</li>
                 <ul>
-                  <li>wip</li>
-                  <li>wip</li>
+                  <li>10 months old</li>
+                  <li>≈ 13.5 years old in human age</li>
+                </ul>
+              <li>Species: Cat (mixed)</li>
+              <li>Gender:</li>
+                <ul>
+                  <li>Male</li>
+                  <li>He/Him</li>
+                </ul>
+              <li>Build:</li>
+                <ul>
+                  <li>140cm / 4′7″</li>
+                  <li>40kg / 88lbs</li>
+                </ul>
+              <li>Alignment: Chaotic Neutral</li>
+              <li>Smoking:
+                <ul>
+                  <li>Two packs/day</li>
+                  <li>Marlboro Reds</li>
                 </ul>
               </li>
-              <li>wip
+              <li>Hobbies:
                 <ul>
-                  <li>wip</li>
-                  <li>wip</li>
+                  <li>Scateboarding</li>
+                  <li>Drunk driving w/o license</li>
+                  <li>Yiffing</li>
+                  <li>and of course, smoking</li>
                 </ul>
               </li>
             </ul>
@@ -130,7 +226,6 @@
             data-link="https://skeb.jp/@shir0kur0_bw">
         </div>
     </div>
-
     <!-- Lightbox Modal with Arrows and Caption -->
     <div id="lightbox" class="lightbox">
       <span class="close">&times;</span>
@@ -142,22 +237,17 @@
         <span class="art-desc"></span>
       </div>
     </div>
-
     <!-- Contact -->
     <div class="card contact">
       <h2>Contact Me</h2>
-      <p>I don't do social media anymore, but you can still find me here:</p>
+      <p>I don't do social media anymore, but you can still find me through:</p>
       <a href="mailto:salmoooon@nicotine.buzz">Email</a>
       <a href="https://discordapp.com/users/102067807251869696" target="_blank">Discord</a>
     </div>
-
     <footer>
       © 2026 salmoooon
     </footer>
-
   </div>
-
   <script src="/script.js"></script>
-
 </body>
 </html>
