Finishing things I hate

--- a/index.html
+++ b/index.html
@@ -36,48 +36,48 @@
         <summary>Things I Enjoy:</summary>
         <div class="details-content">
           <ul>
-            <li>Smoking
+            <li>🚬 Smoking
               <ul>
                 <li>Cigs, cigars, vapes, shisha, you name it!</li>
                 <li>I might be the healthiest smoker you've met</li>
               </ul>
             </li>
-            <li>Shota art
+            <li>🖼️ Shota art
               <ul>
                 <li>Both SFW & NSFW, as long as it's fictional</li>
                 <li>I married to a shota artist</li>
               </ul>
             </li>
-            <li>Furries
+            <li>🐾 Furries
               <ul>
                 <li>Spent way too much on commissions...</li>
                 <li>I don't RP though</li>
               </ul>
             </li>
-            <li>Cats
+            <li>🐱 Cats
               <ul>
                 <li>Proud owner of two cats</li>
                 <li>One of them screams every night which affects my sleep real bad</li>
               </ul>
             </li>
-            <li>Self-hosting
+            <li>🖱️ Self-hosting
               <ul>
-                <li>This site was built with HTML, CSS, and javascript</li>
+                <li>This site was built with HTML, CSS, and JavaScript</li>
                 <li>Not self-hosted though, it's hosted on Github Pages</li>
               </ul>
             </li>
-            <li>PC Building
+            <li>🖥️ PC Building
               <ul>
                 <li>RGB is a sin, change my mind</li>
                 <li>I worked for a PC component company</li>
               </ul>
             </li>
-            <li>Python
+            <li>🐍 Python
               <ul>
-                <li>I worked as a backend SWE/SQA, okay I'll stop the boring part LMAO!</li>
+                <li>I worked as a backend SWE/SQA, okay, I'll stop the boring part LMAO!</li>
               </ul>
             </li>
-            <li>Languages
+            <li>🀄 Languages
               <ul>
                 <li>I've been on the internet long enough to write/speak in English</li>
                 <li>但其實中文才是我的母語</li>
@@ -85,60 +85,60 @@
                 <li>No, programming languages don't count as one</li>
               </ul>
             </li>
-            <li>Long lists and emojis
+            <li>💩 Long lists and emojis
               <ul>
                 <li>Like the one you're reading!</li>
-                <li>I used as little emojis as possible so you know this isn't AI generated</li>
+                <li>I used as few emojis as possible, I promise!</li>
               </ul>
             </li>
-            <li>Indie games
+            <li>🎮 Indie games
               <ul>
                 <li>Outer Wilds, Hollow Knight, and Sludge Life, to name my three favorite games/series</li>
               </ul>
             </li>
-            <li>Kirby
+            <li>💗 Kirby
               <ul>
                 <li>I have a cabinet full of Kirby plushies, figures, and merch</li>
                 <li>I 100%-ed all "Good" Kirby games released on the DS, Switch 1 & 2</li>
               </ul>
             </li>
-            <li>FFXIV (FF14)
+            <li>⚔️ FFXIV (FF14)
               <ul>
                 <li>The game that influenced me the most</li>
                 <li>↪️ララフェル↩️↪️最高品質↩️</li>
                 <li>Learned 3D modeling and game modding, just so my character could smoke in-game</li>
               </ul>
             </li>
-            <li>Did I mention smoking?
+            <li>😶‍🌫️ Did I mention smoking?
               <ul>
                 <li>Been a proud smoker for 15+ years!</li>
                 <li>No brand preference though, I smoke what I got</li>
               </ul>
             </li>
-            <li>Camping
+            <li>🏕️ Camping
               <ul>
                 <li>Not glamping, not hardcore hiking, just normal camping!</li>
               </ul>
             </li>
-            <li>Reading
+            <li>📚 Reading
               <ul>
                 <li>Manga, science fiction, political</li>
                 <li>Yes, I still buy in physical in today's year</li>
               </ul>
             </li>
-            <li>Writing
+            <li>✍ Writing
               <ul>
                 <li>I never shared my work with anyone except my significant other though</li>
               </ul>
             </li>
-            <li>Politics
+            <li>🗣️ Politics
               <ul>
                 <li>Discussions, but not arguments</li>
               </ul>
             </li>
-            <li>Cleaning/Renovating My House
+            <li>🧹 Cleaning/Renovating My House
               <ul>
-                <li>IDK whatelse to put in so here it is</li>
+                <li>IDK what else to put in, so here it is</li>
                 <li>But I mean for real, I like things to be tidy and comfy!</li>
               </ul>
             </li>
@@ -150,17 +150,35 @@
         <summary>Things I Hate:</summary>
         <div class="details-content">
           <ul>
-            <li>wip
+            <li>🤬 Ignorance + opposition = idiot
               <ul>
-                <li>wip</li>
-                <li>wip</li>
+                <li>If you dislike something and wanna tell everyone about it, make sure you know the thing well enough first</li>
+                <li>Expressing your negative opinions while knowing nothing about it makes you an idiot</li>
               </ul>
             </li>
-            <li>wip
+            <li>📱 Social Media
               <ul>
-                <li>wip</li>
-                <li>wip</li>
+                <li>I try to avoid anything with addictive algorithms, AI slop, censorship, cancel culture, or hate content</li>
+                <li>Even if I have to use them cuz there're no alternatives, I try my best to limit/isolate myself from the above</li>
               </ul>
+            </li>
+            <li>✨ Misused Generative AI
+              <ul>
+                <li>If you used Gen AI, say that you used it</li>
+                <li>If you want to take others' work for Gen AI training/referencing, get permission first</li>
+                <li>Little do I know that no one understands this common knowledge</li>
+                <li>This website was made with the help of ChatGPT.</li>
+              </ul>
+            </li>
+            <li>⌛ FOMO/Preordering/Hyping
+              <ul>
+                <li>Learned my lesson through Monster Hunter Wilds, and here are three rules I made for myself</li>
+              </ul>
+              <ol>
+                <li>Never preorder</li>
+                <li>Read reviews before purchasing</li>
+                <li>Treat old stuff as new if you've never experienced it</li>
+              </ol>
             </li>
           </ul>
         </div>
@@ -245,7 +263,7 @@
       <a href="https://discordapp.com/users/102067807251869696" target="_blank">Discord</a>
     </div>
     <footer>
-      © 2026 salmoooon
+      © 2026 salmoooon. Built with ChatGPT.
     </footer>
   </div>
   <script src="/script.js"></script>
