fix some emojis

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <li>💩 Long lists and emojis
               <ul>
                 <li>Like the one you're reading!</li>
-                <li>I used as few emojis as possible, I promise!</li>
+                <li>I used as few emojis as possible, I promise! 💩💩💩</li>
               </ul>
             </li>
             <li>🎮 Indie games
@@ -126,7 +126,7 @@
                 <li>Yes, I still buy in physical in today's year</li>
               </ul>
             </li>
-            <li>✍ Writing
+            <li>✏️ Writing
               <ul>
                 <li>I never shared my work with anyone except my significant other though</li>
               </ul>
