--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
       </div>
     </div>
     <!-- Things I Enjoy/Hate -->
-    <div class="card">
       <details class="animated">
         <summary>Things I Enjoy:</summary>
         <div class="details-content">
@@ -183,7 +182,7 @@
           </ul>
         </div>
       </details>
-    </div>
+      <div class="spacer"></div>
     <!-- Gallery Section -->
     <div class="card gallery">
       <h2>Marbo, my furry OC</h2>
