Marbo is half cat half raccoon now

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                   <li>10 months old</li>
                   <li>≈ 13.5 years old in human age</li>
                 </ul>
-              <li>Species: Cat (mixed)</li>
+              <li>Species: Half cat half raccoon</li>
               <li>Gender:</li>
                 <ul>
                   <li>Male</li>
